# CSCD437_TeamAssignments

./: README.md
Assignment_2/: Assignment2.txt  readme.txt
Assignment_2/MattMcGee/: selfrep.c
Assignment_2/MattMcGee/version 2/: selfrep.c
Assignment_2/MichaelPeterson/: build.sh  makefile  readme.txt
Assignment_2/MichaelPeterson/Solution 1/: assignment2.c
Assignment_2/MichaelPeterson/Solution 2/: assignment2.c  assignment2_char.c  makefile  readme.txt
Assignment_2/Official Solution/: build.sh  makefile  readme.txt
Assignment_3/: README.txt  readme.txt
Assignment_3/HeathNickerbocker/: HackOverrun.pl  StackOverrun.c
Assignment_3/MattMcGee/: HackOverrun.pl  StackOverrun.c
Assignment_3/MichaelPeterson/: #Hack_GNU.pl#  HackOverrun.pl  Hack_Borland.pl  Hack_GNU.pl  Hack_Microsoft.pl  StackOverrun  StackOverrun.c  StackOverrun_GNU  a.out  getShell  getShell.c  hello.c  makefile  stackoverrun.tds
Assignment_3/Official Solution/: Hack_Borland.pl  Hack_GNU.pl  Hack_Microsoft.pl  README.txt
Assignment_6/HeathNickerbocker/: Lab6.java  readme.txt
Assignment_6/MattMcGee/: README.txt  draft1.c  jDefend.java  methJava.txt  readme.txt
Assignment_6/MichaelPeterson/: readme.txt
Assignment_6/MichaelPeterson/C/Assignment_6/: #input.txt#  CMakeLists.txt  a.out  assignment6  assignment6.c  assignment6.h  assignment6_test  input.txt  main  main.c  makefile  md5.c  md5.h  output.txt  trash.txt
Assignment_6/MichaelPeterson/C/Assignment_6/Debug/: Assignment_6
Assignment_6/Official Solution/: CTestCapture.txt  JavaTestCapture.txt  readme.txt
(+17 files in other folders)
