cmake_minimum_required(VERSION 3.6)
project(Assignment_6)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
add_compile_options("-D TEST")
#add_compile_options("-pedantic")
#add_compile_options("-Wall")
#add_compile_options("-Wextra")
#add_compile_options("-Werror")
add_compile_options("-D __GNU__=4")
set(SOURCE_FILES assignment6.c md5.c md5.h)
add_executable(Assignment_6 ${SOURCE_FILES})